# rinha-2024-q1-rust

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf
src/: main.rs
