[package]
name = "rinha-2024-q1-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1.22.0", features = ["full"] }
tokio-postgres = "0.7.10"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.113"
deadpool = { version = "0.10.0", features = ["managed"] }
deadpool-postgres = "0.12.1"
postgres-types = { version = "0.2.1", features = ["with-serde_json-1"] }
chrono = { version = "0.4", features = ["serde"] }